flow_calendar_project_task_stage_state: Documentation.

--- a/flow_calendar_project_task_stage_state/static/description/index.html
+++ b/flow_calendar_project_task_stage_state/static/description/index.html
@@ -1,5 +1,25 @@
 <section class="oe_container">
   <div class="oe_row oe_spaced">
-    <h2 class="oe_slogan" style="color:#875A7B;">Flow Calendar Project Task - Filter by Task Stage State</h2>
-    <p>Filter/Exclude Tasks, marked <strong>done</strong> or <strong>cancelled</strong>, from the <strong>Project-Task</strong> field in the Calendar Event (form).</p>
+    <h2 class="oe_slogan" style="color:#875A7B;">Flow Calendar Project Task - Stage State</h2>
+    <h3 class="oe_slogan">Task planning/calendar features by Stage State.</h3>
+</section>
+
+<section class="oe_container">
+  <div class="oe_row oe_spaced">
+    <div class="oe_span12">
+      <div class="alert alert-info" style="padding:8px;font-weight:300;font-size:20px;">
+	<i class="fa fa-hand-o-right"></i><b> Features: </b>
+	<ul class="list-unstyled">
+          <li>
+	    <i class="fa fa-check-square-o text-primary"></i>
+            Automatically put a Task in the configured <strong>Planned stage</strong> <code>(stage.state==planned)</code>, once its <strong>first Calendar Event</strong> is planned.
+	  </li>
+          <li>
+	    <i class="fa fa-check-square-o text-primary"></i>
+            Exclude/(filter) Tasks marked <em>"Done"</em> or <em>"Cancelled"</em>, from the <strong>Project-Task field</strong> in the <strong>Calendar Event (form).</strong>
+	  </li>
+	</ul>
+      </div>      
+    </div>
+  </div>
 </section>
