flow_calendar_project_task/issue_stage_state: README.rst doc.

--- a/flow_calendar_project_issue_stage_state/static/description/index.html
+++ b/flow_calendar_project_issue_stage_state/static/description/index.html
@@ -12,7 +12,7 @@
 	<ul class="list-unstyled">
           <li>
 	    <i class="fa fa-check-square-o text-primary"></i>
-            Automatically put a Issue in the configured <strong>Planned stage</strong> <code>(stage.state==planned)</code>, once its <strong>first Calendar Event</strong> is planned.
+            Automatically put an Issue in the configured <strong>Planned stage</strong> <code>(stage.state==planned)</code>, once its <strong>first Calendar Event</strong> is planned.
 	  </li>
           <li>
 	    <i class="fa fa-check-square-o text-primary"></i>
